--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,8 @@ CDMrdata = "60f1a76e-720d-4784-bbc6-074b7a9a39a5"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
+PrettyPrinting = "54e16d92-306c-5ea0-a30b-337be88ac337"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 
 [compat]
 julia = "1.7"
