--- a/Project.toml
+++ b/Project.toml
@@ -7,7 +7,9 @@ version = "0.1.0"
 CDMrdata = "60f1a76e-720d-4784-bbc6-074b7a9a39a5"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
+LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 PrettyPrinting = "54e16d92-306c-5ea0-a30b-337be88ac337"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
