--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 PrettyPrinting = "54e16d92-306c-5ea0-a30b-337be88ac337"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 
